new files were added

--- a/src/css/Indiviual.css
+++ b/src/css/Indiviual.css
@@ -26,7 +26,7 @@ body {
     left: 0;
     width: 100%;
     height: 100%;
-    background-image: url("C:\Users\ABHAY SINGH\Videos\Captures\Institue Club\clubs\public\assetes\robotic.jpg");
+    background-image: url("C:\Users\ABHAY SINGH\Videos\Captures\Institue Club\clubs\public\assetes\logo.png");
     background-size: cover;
     background-position: center;
     opacity: 0.15;
