--- a/src/css/club.css
+++ b/src/css/club.css
@@ -1,6 +1,46 @@
 /* DONE */
 
 
+.team_card_img {
+    position: relative;
+    height: 8rem;
+    width: 8rem;
+    overflow: hidden;
+}
+
+.team_card_img span {
+    box-sizing: border-box;
+    display: block;
+    overflow: hidden;
+    width: initial;
+    height: initial;
+    background: none;
+    opacity: 1;
+    border: 0px;
+    margin: 0px;
+    padding: 0px;
+    position: absolute;
+    inset: 0px;
+}
+
+.team_card_img span img {
+    position: absolute;
+    inset: 0px;
+    box-sizing: border-box;
+    padding: 0px;
+    border: medium;
+    margin: auto;
+    display: block;
+    width: 0px;
+    height: 0px;
+    min-width: 100%;
+    max-width: 100%;
+    min-height: 100%;
+    max-height: 100%;
+    object-fit: cover;
+    object-position: center;
+}
+
 .club {
     /* cursor: pointer; */
     background-color: #e5f1f8;
@@ -53,7 +93,7 @@
 }
 
 .club_m {
-    width: 20%;
+    width: 40%;
 }
 
 .club_icons {
